--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon"
+    "devcss": "postcss public/styles/tailwind.css -o public/styles/style.css -w",
+    "dev": "nodemon app.js",
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -18,5 +21,8 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
